kubernetes-devsecops-pipeline/kubernetes/elk/logstash.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.13.0
          resources:
            requests:
              cpu: 300m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          ports:
            - containerPort: 5044
              name: beats
            - containerPort: 5000
              name: tcp
          volumeMounts:
            - name: pipeline
              mountPath: /usr/share/logstash/pipeline
      volumes:
        - name: pipeline
          configMap:
            name: logstash-pipeline
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: logging
spec:
  selector:
    app: logstash
  ports:
    - port: 5044
      name: beats
    - port: 5000
      name: tcp
